SigmaCodebackup3rdSep/objects/Milestone1_Task__c.object
<CustomObject>
    <fields>
        <fullName>Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Project_Tasks_Assigned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Task</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Late_Formula__c</fullName>
        <formula>Today() -  Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Late Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Late__c</fullName>
        <label>Days Late</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_GUID__c</fullName>
        <label>Email GUID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Expense__c</fullName>
        <label>Estimated Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Balance__c</fullName>
        <formula>Estimated_Hours__c - Total_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Email_Received__c</fullName>
        <label>Last Email Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Overall_Status__c</fullName>
        <formula>if ( Complete__c == true, &apos;Complete&apos;,
if ( and( Days_Late_Formula__c &gt; 0, Blocked__c ),
if(Len( Text(Task_Stage__c))&gt;0 , &apos;Late &amp; Blocked &apos; &amp; Text(Task_Stage__c), &apos;Late &amp; Blocked&apos;),
if (Days_Late_Formula__c &gt; 0, 
if(Len( Text(Task_Stage__c))&gt;0, &apos;Late &apos; &amp; text(Task_Stage__c), &apos;Late&apos;),
if(Blocked__c == true, 
if(Len( Text(Task_Stage__c))&gt;0, &apos;Blocked &apos; &amp; text(Task_Stage__c), &apos;Blocked&apos;), 
if(Len( Text(Task_Stage__c))&gt;0, &apos;Open &apos; &amp; Text(Task_Stage__c), &apos;Open&apos;) 
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task_Import_Id_c__c</fullName>
        <label>Predecessor_Task_Import_Id__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <formula>Project_Milestone__r.Project1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectStatus__c</fullName>
        <formula>TEXT(Project_Milestone__r.Project1__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectStatus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Milestone__c</fullName>
        <label>Milestone</label>
        <referenceTo>Milestone__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>IF( OR($User.UIThemeDisplayed == &quot;Theme4d&quot;, $User.UIThemeDisplayed == &quot;Theme4t&quot;),
        HYPERLINK(&apos;one.app?source=aloha#/sObject/&apos; + Project_Milestone__r.Project1__c + &apos;/view&apos;,
                  Project_Milestone__r.Project1__r.Name,
                  &apos;_self&apos;),
        HYPERLINK(Project_Milestone__r.Project1__c,
                  Project_Milestone__r.Project1__r.Name,
                  &apos;_self&apos;)
   )</formula>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_ID__c</fullName>
        <displayFormat>S-{0000}</displayFormat>
        <label>Short ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Short_ID__c</fullName>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Task Short ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Task_Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <summarizedField>Time_Sheet__c.Hours__c</summarizedField>
        <summaryForeignKey>Time_Sheet__c.Project_Task__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CannotBeBlockedIfComplete</fullName>
        <active>true</active>
        <errorConditionFormula>if (And ( Blocked__c == true, Complete__c == true), true, false)</errorConditionFormula>
        <errorDisplayField>Blocked__c</errorDisplayField>
        <errorMessage>You cannot mark a completed task as blocked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotBeCompleteIfBlocked</fullName>
        <active>true</active>
        <errorConditionFormula>if (and ( Complete__c == true, Blocked__c ==true), true, false)</errorConditionFormula>
        <errorDisplayField>Complete__c</errorDisplayField>
        <errorMessage>You cannot complete a task marked as blocked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Greater_Than_Milestone_Deadline</fullName>
        <active>true</active>
        <errorConditionFormula>Due_Date__c &gt; Project_Milestone__r.Deadline__c</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be smaller than Milestone Deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_Smaller_Than_Milestone_Kickoff</fullName>
        <active>true</active>
        <errorConditionFormula>Due_Date__c &lt; Project_Milestone__r.Kickoff__c</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be greater than Milestone Kickoff Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_be_blank_if_not_blocked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( and(Blocked__c == false, len( Reason__c ) &gt; 0) , True, False)</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>Must be blank if &quot;blocked&quot; is not checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_not_be_blank_if_blocked</fullName>
        <active>true</active>
        <errorConditionFormula>IF( and(Blocked__c == true, len( Reason__c) == 0) , True, False)</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>If this task is blocked you must enter a reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_Date_More_Than_Due_Date</fullName>
        <active>false</active>
        <errorConditionFormula>if (and(!isblank(Start_Date__c), !isblank(Due_Date__c)), true, false)</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date should be greater than Start Date</errorMessage>
    </validationRules>
</CustomObject>